<resources>
    <string name="app_name">BOHAN</string>
    <string name="bohan_smart_power_terminal">BOHAN Smart Power Terminal</string>
    <string name="action_settings">Settings</string>
    <string name="bohan_userName">Username</string>
    <string name="password">Login Password</string>
    <string name="password2">Confirm Password</string>
    <string name="confirm_password">Password</string>
    <string name="device_list">List</string>
    <string name="login">Log In</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="register_success">Register Success</string>
    <string name="register_fail">Register Fail</string>
    <string name="register">Register BOHAN</string>
    <string name="know_more_about_bohan">Know More:</string>
    <string name="web_line"><u>www.bohan-smartec.com</u></string>
    <string name="click_back_again_exit">Press The Return Key Once More To Exit</string>
    <string name="login_successfully">Login Successfully!</string>
    <string name="begin_time_click">Click To Select StartTime</string>
    <string name="end_time_click">Click To Select EndTime</string>
    <string name="exit_account">Are you sure to Logout？</string>
    <string name="switchn1">Switch1</string>
    <string name="switchn2">Switch2</string>
    <string name="switchn3">Switch3</string>
    <string name="band_success">Check QR Code Success</string>
    <string name="hour_des">(Ps:1~2 means 1:00~2:00)</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="id">ID:</string>
    <string name="loading_popwer_data">Querying Electricity Datas</string>
    <string name="loading_popwer_rate_data">QueryingElectric power</string>
    <string name="save_device_data">Set Device Info</string>
    <string name="go_smart_link_now">Smark Link Now</string>
    <string name="go_smart_link_later">Smark Link Later</string>
    <string name="save_info_succefully_smark_link">Save Device Info Successfully!\nThis Device still did not be on line\n If you want the device to be online,\n please click "Smart Link Now"</string>
    <string name="save_device_data_successfully">Set Device Info Successfully</string>
    <string name="mon">Mon.</string>
    <string name="tue">Tue.</string>
    <string name="wed">Wed.</string>
    <string name="thu">Thu.</string>
    <string name="fri">Fri.</string>
    <string name="sat">Sat.</string>
    <string name="sun">Sun.</string>
    <string name="select_day">Select Days</string>
    <string name="sumit">Sumit</string>
    <string name="fast_add">Fast Add</string>
    <string name="add_by_hand">Add Manually</string>
    <string name="wifi">WiFi</string>
    <string name="show_password">Show Password</string>
    <string name="add">Add</string>
    <string name="connect_wifi">WiFi Connection</string>
    <string name="connect_step">Step①:Please join your phone to WIFI;\n\nStep②:Power up the device，long press the button for 4~7 seconds until the screen shows "CONNECT";\n\nStep③:Enter your WIFI Password and click "Add".</string>
    <string name="main_page">MainPage</string>
    <string name="all_info">Info</string>
    <string name="user_center">User</string>
    <string name="manage_device">Manage</string>
    <string name="bound_list">List</string>
    <string name="device_name">Name:</string>
    <string name="network_status">Network:</string>
    <string name="type">Type:</string>
    <string name="location">Location:</string>
    <string name="deviceType">Appliances Type :</string>
    <string name="button_status_on">Status:On</string>
    <string name="button_status_off">Status:Off</string>
    <string name="device_setting">Device Setting</string>
    <string name="time_setting">Time Setting</string>
    <string name="unit_price">Unit Price</string>
    <string name="load_threshold">Load Threshold</string>
    <string name="ammeter_time">Ammeter Time</string>
    <string name="timing">Timing</string>
    <string name="save">Save</string>
    <string name="click_timing_to_timing">Click Timing Button To Timing</string>
    <string name="enter_unit_price">Unit Price</string>
    <string name="enter_load_threshold">Load Threshold</string>
    <string name="begin_time">Time Begin</string>
    <string name="click_set_begin_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="click_set_end_time">End Time</string>
    <string name="duration">Duration</string>
    <string name="begin_to_count">Begin</string>
    <string name="data_of_this_time">Setting Of This Time</string>
    <string name="total_time">Total Time</string>
    <string name="last_measurement_result">Result of last time</string>
    <string name="begin_to_count_warning">Dear, system is measuring the data for you. \nAfter the system finishing measurement, \nwe will show you the result.</string>
    <string name="para_setting">Parama Setting</string>
    <string name="reset_pwd">Password</string>
    <string name="voltage">Voltage</string>
    <string name="current">Current</string>
    <string name="power">Power</string>
    <string name="power_factor">Power Factor</string>
    <string name="integrated_ele_power">Integrate Power</string>
    <string name="cumulative_carbon_emissions">Carbon Emissions</string>
    <string name="total_amount">Total Amount</string>
    <string name="yuan">$</string>
    <string name="title_activity_cal">CalActivity</string>
    <string name="title_activity_test_brocast">TestBrocastActivity</string>
    <string name="enter_password_more_than_6_char">6 - 12 Letters</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="update">Refresh</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="real_time_data">Real-time Data</string>
    <string name="preferences">Preferences</string>
    <string name="counting">Counting</string>
    <string name="period">Period</string>
    <string name="countdown">Countdown</string>
    <string name="info">Info</string>
    <string name="coutDownWarningSentence">This Device still do not set any countdown.\n If you want to set countdown,\nplease choose the time interval\n and then click "On" or "Off",\nat last, click "Start".</string>
    <string name="coutDownWarningEnd">Countdown Finished.</string>
    <string name="after_5_min">After 5 Minutes</string>
    <string name="after_10_min">After 10 Minutes</string>
    <string name="custom_time">Custom</string>
    <string name="device_on_off">Device On/Off</string>
    <string name="userName">User</string>
    <string name="userName2">Username</string>
    <string name="verCode">Code</string>
    <string name="enter_verCode">Enter Code</string>
    <string name="get_verCode">Get Code</string>
    <string name="s_try_again">s After Retry</string>
    <string name="next">Next</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="title_activity_reset_data">ResetDataActivity</string>
    <string name="resetDeviceInfo">Reset Device Info</string>
    <string name="day1">D</string>
    <string name="month1">M</string>
    <string name="year1">Y</string>
    <string name="to">To</string>
    <string name="all_device_last_24_hours">All Device hours of Day Power (kwh)</string>
    <string name="all_device_last_2024_hours">All Device Last 20 to 24 hours(kWh)</string>
    <string name="all_device_last_2024_hours_power">All Device Last 20 to 24 hours(kW)</string>
    <string name="all_device_last_15_days">All Device Last 10 Days(kWh)</string>
    <string name="all_device_last_15_days_power">All Device Last 10 Days(kW)</string>
    <string name="all_device_last_15_30_days">All Device Last 11 to 20 Days(kWh)</string>
    <string name="all_device_last_15_30_days_power">All Device Last 11 to 20 Days(kW)</string>
    <string name="all_device_last_21_30_days">All Device Last 21 to 30 Days(kWh)</string>
    <string name="all_device_last_21_30_days_power">All Device Last 21 to 30 Days(kW)</string>
    <string name="all_device_month_power">All Device Day of Month Power(kWh)</string>
    <string name="all_device_year_power">All Device Month of Year Power(kWh)</string>
    <string name="hour">Hour</string>
    <string name="hour3">Hour</string>
    <string name="day_">Day</string>
    <string name="month_">Month</string>
    <string name="device_last_12_hours">Device Last 12 hours(kWh)</string>
    <string name="device_last_12_24_hours">Device Last 13 to 24 hours(kWh)</string>
    <string name="device_last_12_24_hours_power">Device Last 13 to 24 hours(kW)</string>
    <string name="device_last_12_hours_power">Device Last 12 hours(kW)</string>
    <string name="device_last_24_hours">Device Last 24 hours Datas(kW)</string>
    <string name="device_last_24_hours_rates">Device Last 24 hours Rates(kW)</string>
    <string name="device_hour_day_AvgPower">Device Hour Day AvgPower(W)</string>
    <string name="device_hour_day_power">Device Hour Day Power(kWh)</string>
    <string name="device_last_5_hours_power">Device Last 6 hours(kW)</string>
    <string name="device_last_5_hours">Device Last 6 hours(kWh)</string>
    <string name="device_last_610_hours">Device Last 7 to 12 hours(kWh)</string>
    <string name="device_last_610_hours_power">Device Last 7 to 12 hours(kW)</string>
    <string name="device_last_1115_hours">Device Last 13 to 18 hours(kWh)</string>
    <string name="device_last_1115_hours_power">Device Last 13 to 18 hours(kW)</string>
    <string name="device_last_1620_hours">Device Last 19 to 24 hours(kWh)</string>
    <string name="device_last_1620_hours_power">Device Last 19 to 24 hours(kW)</string>
    <string name="device_last_2024_hours">Device Last 20 to 24 hours(kWh)</string>
    <string name="device_last_2024_hours_power">Device Last 20 to 24 hours(kW)</string>
    <string name="device_last_30_days">Device Last 30 Days Electricity Consumption(kWh)</string>
    <string name="device_last_30_days_rates">Device Last 30 Days Electric Power(kW)</string>
    <string name="device_day_of_month_avg_power">Device Day of Month AvgPower(W)</string>
    <string name="device_day_of_month_power">Device Day of Month Power(kWh)</string>
    <string name="device_last_6_days">Device Last 6 Days(kWh)</string>
    <string name="device_last_6_days_power">Device Last 6 Days(kW)</string>
    <string name="device_last_7_12_days">Device Last 7 to 12 Days(kWh)</string>
    <string name="device_last_7_12_days_power">Device Last 7 to 12 Days(kW)</string>
    <string name="device_last_13_18_days">Device Last 13 to 18 Days(kWh)</string>
    <string name="device_last_13_18_days_power">Device Last 13 to 18 Days(kW)</string>
    <string name="device_last_19_24_days">Device Last 19 to 24 Days(kWh)</string>
    <string name="device_last_19_24_days_power">Device Last 19 to 24 Days(kW)</string>
    <string name="device_last_25_30_days">Device Last 25 to 30 Days(kWh)</string>
    <string name="device_last_25_30_days_power">Device Last 25 to 30 Days(kW)</string>
    <string name="device_last_12_months">Device Last 12 Months Datas(kWh)</string>
    <string name="device_last_12_months_powers">Device Last 6 Months Rates(kW)</string>
    <string name="device_month_of_year_avg_power">Device Month of Year AvgPower(W)</string>
    <string name="device_month_of_year_power">Device Month of Year Power(kWh)</string>
    <string name="device_last_6_months">Device Last 6 Months(kWh)</string>
    <string name="device_last_6_months_power">Device Last 6 Months(kW)</string>
    <string name="add_device">Add Device</string>
    <string name="online_list_warn">Dear, you still did not add any devices.\n If you want to add device, \nplease click the button below, \nscan the QR Code which is behind the device.</string>
    <string name="loading">Loading...</string>
    <string name="cancle">Cancle</string>
	<string name="empty_set">清空设定</string>
	<string name="set_pwd">设置密码</string>
</resources>