<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp" >

        <LinearLayout
            android:id="@+id/tag_ll"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_centerHorizontal="true" >

            <TextView
                android:id="@+id/tvDayData"
                style="@style/TVNormalDarkTab"
                android:text="@string/day" />

            <TextView
                android:id="@+id/tvMonthData"
                style="@style/TVNormalDarkTab"
                android:text="@string/month" />

            <TextView
                android:id="@+id/tvYearData"
                style="@style/TVNormalDarkTab"
                android:text="@string/year" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/ivCursor"
        android:layout_width="120dp"
        android:layout_height="8dp"
        android:layout_gravity="bottom|left"
        android:layout_marginLeft="0dp"
        android:background="@drawable/viewpager_tab_line"
        android:scaleType="matrix" />

    <View style="@style/lineTran2" />

    <LinearLayout
        android:id="@+id/llContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>