<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical" >

    <include layout="@layout/custom_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:orientation="horizontal" >

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/llClickSelectTime1"
                    style="@style/TVSmallDark"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:background="@drawable/selector_white_bg"
                    android:text="@string/begin_time_click" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/bang_cursor" />

                <!--
                     <LinearLayout 
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    ></LinearLayout>
                -->

            </LinearLayout>

            <View style="@style/lineTran" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <TextView
                        style="@style/TVSmallblue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/begin_time"
                        android:textSize="@dimen/mormal_font_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >

                    <TextView
                        android:id="@+id/tvStartTime"
                        style="@style/TVSmallRed"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="00:00"
                        android:textSize="@dimen/large_font_size" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:orientation="horizontal" >

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/llClickSelectTime2"
                    style="@style/TVSmallDark"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:background="@drawable/selector_white_bg"
                    android:text="@string/end_time_click" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/bang_cursor" />
            </LinearLayout>

            <View style="@style/lineTran" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center" >

                    <TextView
                        style="@style/TVSmallblue"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/end_time"
                        android:textSize="@dimen/mormal_font_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" >

                    <TextView
                        android:id="@+id/tvEndTime"
                        style="@style/TVSmallRed"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="00:00"
                        android:textSize="@dimen/large_font_size" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </LinearLayout>

            <View style="@style/lineTran" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/TVSmallDark"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/white"
                    android:text="@string/select_day" />

                <View style="@style/lineTran" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <CheckBox
                            android:id="@+id/check1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/mon" />

                        <CheckBox
                            android:id="@+id/check2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tue" />

                        <CheckBox
                            android:id="@+id/check3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/wed" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <CheckBox
                            android:id="@+id/check4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/thu" />

                        <CheckBox
                            android:id="@+id/check5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/fri" />

                        <CheckBox
                            android:id="@+id/check6"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sat" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <CheckBox
                            android:id="@+id/check7"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sun" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View style="@style/lineTran" />
        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="" >
        </LinearLayout>
        -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_white_bg" >

            <Button
                android:id="@+id/tvClear"
                style="@style/TVSmallDark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector_white_bg"
                android:text="@string/empty_set" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_white_bg" >

            <Button
                android:id="@+id/tvCancle"
                style="@style/TVSmallDark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector_white_bg"
                android:text="@string/cancle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_white_bg" >

            <Button
                android:id="@+id/tvConfirm"
                style="@style/TVSmallDark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector_white_bg"
                android:text="@string/sumit" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>