<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/cn.mioto.bohan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <cn.mioto.bohan.view.loadingview.LoadingView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|center_vertical"
        app:loadingText="@string/loading" >
    </cn.mioto.bohan.view.loadingview.LoadingView>

    <ListView
        android:id="@+id/lvListBang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/white"
        android:visibility="gone" >
    </ListView>

    <LinearLayout
        android:id="@+id/llNoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            style="@style/TVSmallRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/online_list_warn" />

        <TextView
            android:id="@+id/tvBang"
            style="@style/TVSmallwhite"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/selector_btn_radius_gradia_2"
            android:text="@string/add_device" />
    </LinearLayout>

</LinearLayout>